--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <title>Projeto sistema com VUE</title>
 </head>
-<body>
+<body id="app">
    <header class="sticky-top">
        <nav class="navbar navbar-expand-lg navbar-light bg-menu">
             <div class="container-fluid">
@@ -31,16 +31,17 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1">
                             <li class="nav-item">
-                                <a href="" class="nav-link">Calcular Idade</a>
+                                <!-- $event permite acessar o evento orginal do DOM de forma que eu consiga manipular todo o conteúdo do elemento-->
+                                <a href="" class="nav-link idade" @click.prevent="verificarLink($event.target.classList)">Calcular Idade</a>
                             </li>
                             <li class="nav-item">
-                                <a href="" class="nav-link">Calcular Câmbio</a>
+                                <a href="" class="nav-link cambio" @click.prevent="verificarLink($event.target.classList)">Calcular Câmbio</a>
                             </li> 
                             <li class="nav-item">
-                                <a href="" class="nav-link">Verificar Dia da Semana</a>
+                                <a href="" class="nav-link diaSemana" @click.prevent="verificarLink($event.target.classList)">Verificar Dia da Semana</a>
                             </li>
                             <li class="nav-item">
-                                <a href="" class="nav-link">Calcular Desconto</a>
+                                <a href="" class="nav-link desconto" @click.prevent="verificarLink($event.target.classList)">Calcular Desconto</a>
                             </li>
                             <li class="nav-item">
                                 <a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalSobre">Sobre</a>
@@ -57,46 +58,53 @@
        <!-- BOAS VINDAS -->
        <section class="p-3 my-2 bg-primary shadow">
            <div class="container-fluid py-5 text-center">
-               <h2 class="display-6 fw-bold text-light">Olá, Seja Bem Vindo ao Nosso Sistema</h2>
+               <h2 class="display-6 fw-bold text-light">{{ textoInicial }}</h2>
            </div>
        </section>
 
        <!-- HOME -->
-       <section class="p-3 my-5 shadow col-md-10 mx-auto">
+       <section v-if="bloco.inicio" class="p-3 my-5 shadow col-md-10 mx-auto">
            <div class="container-fluid py-5 text-center">
                <p class="fs-4">Para começar, escolha uma das funções do menu</p>
            </div>
        </section>
 
        <!-- FUNCIONALIDADE 1: IDADE -->
-       <section class="p-3 my-5 col-md-10 shadow mx-auto">
+       <section v-if="bloco.idade" class="p-3 my-5 col-md-10 shadow mx-auto">
            <div class="container-fluid py-5 text-center">
                <form action="">
                     <div class="d-flex align-items-center">
                         <span class="material-symbols-outlined fs-1 me-2">event</span>
-                        <input type="number" class="form-control form-control-lg" placeholder="Digite o ano do seu nascimento com 4 dígitos" min="1900" max="2050" required>
+                        <input type="number" class="form-control form-control-lg" placeholder="Digite o ano do seu nascimento com 4 dígitos" min="1900" max="2050" required v-model="campoIdade" @keyup="validarIdade()">
+                    </div>
+
+                    <div class="text-start">
+                        <small class="text-danger">{{ info }}</small>
                     </div>
 
                     <div class="d-flex justify-content-end mt-2">
-                        <button type="submit" class="btn btn-lg btn-primary">Calcular</button>
+                        <button type="submit" class="btn btn-lg btn-primary" @click.prevent="calcularIdade()">Calcular</button>
                     </div>
+
+                    <p class="lead text-start">{{ resultado }}</p>
+
                </form>
            </div>
        </section>
 
        <!-- FUNCIONALIDADE 2: CÂMBIO -->
-       <section class="p-3 my-5 col-md-10 shadow mx-auto">
+       <section v-if="bloco.cambio" class="p-3 my-5 col-md-10 shadow mx-auto">
            <div class="container-fluid py-5 text-center">
                <form action="">
                     <section class="row">
                         <div class="col-md-6 d-flex align-items-center mt-2">
                             <span class="material-symbols-outlined fs-1 me-2">currency_exchange</span>
-                            <input type="text" class="form-control form-control-lg" placeholder="Informe a quantidade de valor em dólar" pattern="^[0-9]+(\.([0-9]{2}))?$" title="Informe apenas números inteiros ou separados por ponto com 2 casas decimais">
+                            <input type="text" class="form-control form-control-lg" placeholder="Informe a quantidade de valor em dólar" pattern="^[0-9]+(\.([0-9]{2}))?$" title="Informe apenas números inteiros ou separados por ponto com 2 casas decimais" v-model="dolar">
                         </div>
 
                         <div class="col-md-6 d-flex align-items-center mt-2">
                             <span class="material-symbols-outlined fs-1 me-2">currency_exchange</span>
-                            <input type="text" class="form-control form-control-lg" placeholder="Qual a cotação do Dólar?" pattern="^[0-9]+(\.([0-9]{2}))?$" title="Informe apenas números inteiros ou separados por ponto com 2 casas decimais">
+                            <input type="text" class="form-control form-control-lg" placeholder="Qual a cotação do Dólar?" pattern="^[0-9]+(\.([0-9]{2}))?$" title="Informe apenas números inteiros ou separados por ponto com 2 casas decimais" v-model="cotacao">
                         </div>
                     </section>
 
@@ -105,31 +113,42 @@
                         <label for="switch" class="form-check-label">Usar cotação online</label>
                     </div>
 
-                    <div class="d-flex justify-content-end mt-2">
-                        <button type="submit" class="btn btn-lg btn-primary">Converter</button>
+                    <div class="text-start">
+                        <small class="text-danger">{{ info }}</small>
                     </div>
+
+                    <div class="d-flex justify-content-end mt-2">
+                        <button type="submit" class="btn btn-lg btn-primary" @click.prevent="converterDolar()">Converter</button>
+                    </div>
+
+                    <p class="lead text-start">{{ resultado }}</p>
                </form>
            </div>
        </section>
 
        <!-- FUNCIONALIDADE 3: VERIFICAR DIA DA SEMANA -->
-       <section class="p-3 my-5 col-md-10 shadow mx-auto">
+       <section v-if="bloco.diaSemana" class="p-3 my-5 col-md-10 shadow mx-auto">
            <div class="container-fluid py-5 text-center">
                <form action="">
                     <div class="d-flex align-items-center">
                         <span class="material-symbols-outlined fs-1 m-2">date_range</span>
-                        <input type="date" class="form-control form-control-lg" placeholder="Insira uma data" id="diaSemana" data-bs-placement="top" title="Informe uma data qualquer">
+                        <input type="date" class="form-control form-control-lg" placeholder="Insira uma data" id="diaSemana" data-bs-placement="top" title="Informe uma data qualquer" v-model="data">
                     </div>
+                    <div class="text-start">
+                        <small class="text danger"> {{ info}}</small>
+
+                    </div>
+                    <p class="lead text-start">{{resultado}}</p>
 
                     <div class="d-flex justify-content-end mt-2">
-                        <button type="submit" class="btn btn-lg btn-primary">Verificar dia da semana</button>
+                        <button type="submit" class="btn btn-lg btn-primary" @click.prevent="verificarDiaSemana()">Verificar dia da semana</button>
                     </div>
                </form>
            </div>
        </section>        
 
        <!-- FUNCIONALIDADE 4: DESCONTO PORCENTAGEM -->
-       <section class="p-3 my-5 col-md-10 shadow mx-auto">
+       <section v-if="bloco.desconto" class="p-3 my-5 col-md-10 shadow mx-auto">
            <div class="container-fluid py-5 text-center">
                <form action="">
                    <section class="row">
@@ -190,9 +209,11 @@
         </div>
    </section>
     
+<script src="https://unpkg.com/vue@3"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
+<script src="js/script.js"></script>
 <script>
 const diaSemana = document.querySelector('#diaSemana')
 const tooltip = new bootstrap.Tooltip(diaSemana)
