--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        </section>
 
        <!-- FUNCIONALIDADE 3: VERIFICAR DIA DA SEMANA -->
-       <section v-if="bloco.diaSemana" class="p-3 my-5 col-md-10 shadow mx-auto" @mouseover = "ativarTooltip()">
+       <section v-if="bloco.diaSemana" class="p-3 my-5 col-md-10 shadow mx-auto" @mouseover>
            <div class="container-fluid py-5 text-center">
                <form action="">
                     <div class="d-flex align-items-center">
@@ -163,9 +163,13 @@
                             
                        </div>
                    </section>
+                   <div class="text-start">
+                       <small class="text-start">{{ info }}</small>
+                       
+                   </div>
 
                    <div class="d-flex justify-content-end mt-2">
-                       <button type="submit" class="btn btn-lg btn-primary">Calcular Desconto</button>
+                       <button type="submit" class="btn btn-lg btn-primary" @ click.prevent = "Calcular Desconto">Calcular Desconto</button>
                     </div>
                </form>
            </div>
